@@ -59,20 +59,6 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <executable>${java.home}/bin/java</executable>
-                    <workingDirectory>${project.basedir}/..</workingDirectory>
-                    <arguments>
-                        <argument>--module-path=mods</argument>
-                        <argument>--add-modules=dk.sdu.st4.agv,dk.sdu.st4.warehouse,dk.sdu.st4.assemblystation</argument>
-                        <argument>--module=dk.sdu.st4.core/dk.sdu.st4.core.server.Main</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 </project>
